# fann-mcu-updated

fann-net-generator/: Cargo.toml  generator.py
fann-net-generator/src/: lib.rs  main.rs
include/: fann.h  fann_structs.h
src/: fann.c
