[package]
name = "fann-net-generator"
version = "0.1.0"
authors = ["Andrea Cracco <guilucand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
lazy_static = "1.4.0"
proc-macro2 = "1.0.24"
quote = "1.0.7"
cmd_lib = "0.8.5"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
